# magi-cli

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  devbox.json  flake.nix  noxfile.py  pyproject.toml
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/workflows/: changelog.yml  codeql.yml  labeler.yml  release.yml  tests.yml
src/magi_cli/: __init__.py  __main__.py
src/ologist_cli/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_main.py
