[tool.poetry]
name = "magi-cli"
version = "0.0.0" # Version set at release-time
description = "Magi CLI"
authors = ["Josh Finch <josh@ologist.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ologistio/magi"
repository = "https://github.com/ologistio/magi"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/ologistio/magi/releases"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
rich = "^13.7.1"
pydantic = "^2.6.3"
cookiecutter = "^2.6.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.8"
black = "^24.2.0"
coverage = {extras = ["toml"], version = "^7.4.3"}
darglint = "^1.8.1"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
flake8-docstrings = "^1.7.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pep8-naming = "^0.13.3"
pre-commit = "^3.6.2"
pre-commit-hooks = "^4.5.0"
pytest = "^8.1.0"
pyupgrade = "^3.15.1"
typeguard = "^4.1.5"

[tool.poetry.scripts]
magi = "magi_cli.__main__:main"

[tool.poetry.group.system.dependencies]
nox = "^2024.3.2"
nox-poetry = "^1.0.3"
pip = "^24.0"
virtualenv = "^20.25.1"
poetry-plugin-export = "^1.7.0"
pre-commit = "^3.6.2"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["magi_cli"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
fail_under = 100
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
